# efcf-ethmutator

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
afl_ethmutator/: Cargo.toml
afl_ethmutator/src/: lib.rs
ethmutator/: Cargo.toml  allocator_bench_results.md
ethmutator/benches/: benches.rs  run_allocator_comparision.sh
ethmutator/misc/: tester.rs
ethmutator/src/: cmptrace.rs  dictionary.rs  instructions.rs  lib.rs  serializer.rs  smallset.rs  stagelists.rs  test_helpers.rs  tests.rs  trim.rs  types.rs  utils.rs
utils/: Cargo.toml
utils/src/: analyzer.rs  minimizer.rs  seeder.rs  synthesizer.rs  transcoder.rs
utils/templates/: attack.sol  js-attack.js  single_attack.sol
